Fizz Buzz Exercise (script element)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Fizz Buzz</title>
 </head>
 <body>
-    <script src="fizz_buzz.js"></script>
+    <script src="./fizz_buzz.js"></script>
 </body>
 </html>
